# jarowinkler-cpp

./: CHANGELOG.md  CMakeLists.txt  README.md
bench/: CMakeLists.txt
cmake/: JaroWinklerConfig.cmake.in  jaro_winklerConfig.cmake.in
jaro_winkler/: jaro_winkler.hpp
jaro_winkler/details/: common.hpp  intrinsics.hpp  jaro_impl.hpp
test/: CMakeLists.txt  tests-jaro-winkler.cpp
